# antenna

./: .gitignore  Cargo.toml  LICENSE  README.md
antenna/: Cargo.toml
antenna-cli/: Cargo.toml  README.md
antenna-cli/src/: main.rs
antenna-codegen/: Cargo.toml
antenna-codegen/src/: antenna_client.rs  antenna_room.rs  lib.rs
antenna-core/: Cargo.toml
antenna-core/src/: lib.rs
antenna-core/src/model/: channel.rs  mod.rs  packet.rs  peer.rs  request.rs  signaling.rs
antenna-core/src/traits/: message.rs  mod.rs
antenna-core/src/utils/: constants.rs
antenna-server/: Cargo.toml
antenna-server/src/: lib.rs
antenna-server/src/room/: mod.rs  room.rs  room_agent.rs  room_manager.rs
antenna-server/src/room/context/: room_context.rs
antenna-server/src/server/: mod.rs
antenna-server/src/signaling/: mod.rs  signaling_output.rs  signaling_sender.rs  signaling_service.rs  ws_axum_handler.rs  ws_handler.rs
antenna-server/src/transport/: connection_wrapper.rs  transport_event.rs
antenna-server/tests/integration/: mod.rs
antenna-server/tests/integration/connection_tests/: mod.rs  test_ice_candidate_exchange.rs  test_peer_disconnect_triggers_leave.rs  test_single_peer_joins_room.rs
antenna-server/tests/integration/messaging_tests/: mod.rs  test_full_peer_cycle.rs  test_peer_sends_binary_data.rs  test_peer_sends_message.rs  test_rapid_message_sending.rs
antenna-server/tests/integration/multi_peer_tests/: mod.rs  test_multiple_peers_join.rs  test_peer_leaves_others_stay.rs  test_three_peers_join.rs
antenna-server/tests/utils/: mock_behavior.rs  mock_signaling.rs  mod.rs  signal_helpers.rs  test_client.rs
antenna-wasm-gen/: Cargo.toml
antenna-wasm-gen/src/: lib.rs
antenna-wasm-gen/src/engine/: create_pc_impl.rs  handle_remote_offer_impl.rs  handle_signal_impl.rs  init_connection_impl.rs  mod.rs  setup_data_channel_impl.rs  ws_setup_impl.rs
antenna-wasm-gen/src/logger/: mod.rs
antenna/src/: lib.rs
antenna_codegen/: Cargo.toml
antenna_core/: Cargo.toml
antenna_core/src/: lib.rs
antenna_core/src/model/: channel.rs  mod.rs  packet.rs  peer.rs  room.rs
antenna_core/src/traits/: message.rs
antenna_server/: Cargo.toml
antenna_server/src/: lib.rs
antenna_server/src/context/: mod.rs  room_context.rs
antenna_server/src/room/: mod.rs  room.rs  room_behavior.rs  room_command.rs
antenna_server/src/room/context/: room_context.rs
antenna_server/src/signaling/: mod.rs  signaling.rs  signaling_output.rs  signaling_service.rs  singlaing.rs  ws_handler.rs
antenna_server/src/traits/: mod.rs  room_behavior.rs
antenna_server/src/transport/: connection_wrapper.rs  mod.rs  transport.rs  transport_config.rs  transport_event.rs
antenna_server/tests/integration/: mod.rs
antenna_server/tests/integration/connection_tests/: test_peer_disconnect_triggers_leave.rs  test_single_peer_joins_room.rs
antenna_server/tests/integration/messaging_tests/: test_full_peer_cycle.rs  test_peer_sends_message.rs  test_rapid_message_sending.rs
antenna_server/tests/utils/: mock_behavior.rs  mock_signaling.rs  signal_helpers.rs  test_client.rs
antenna_wasm_gen/: Cargo.toml
antenna_wasm_gen/src/: lib.rs
antenna_wasm_gen/src/engine/: mod.rs
antenna_wasm_gen/src/logger/: mod.rs
example/simple-group-chat/server/: Cargo.toml
example/simple-group-chat/server/src/: main.rs
example/simple-group-chat/wasm-lib/: Cargo.toml
example/simple-group-chat/wasm-lib/src/: lib.rs
examples/simple-group-chat/: Cargo.toml  README.md  docker-compose.yaml  nginx.conf
examples/simple-group-chat/client/: .prettierrc.js  Dockerfile  eslint.config.js  package-lock.json  package.json
examples/simple-group-chat/client/src/: App.tsx
examples/simple-group-chat/client/src/types/: ChatClientMsg.ts
examples/simple-group-chat/server/: Cargo.toml  Dockerfile
examples/simple-group-chat/server/src/: main.rs
examples/simple-group-chat/shared/: Cargo.toml
examples/simple-group-chat/shared/src/: lib.rs
examples/simple-group-chat/wasm-lib/: Cargo.toml
examples/simple-group-chat/wasm-lib/src/: lib.rs
