[package]
name = "antenna-server"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
antenna-core = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
webrtc = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
