[package]
name = "antenna"
version = "0.1.0"
edition = "2024"

[dependencies]
antenna_core = { path = "../antenna_core" }
antenna_wasm_gen = { path = "../antenna_wasm_gen", optional = true }
antenna_server = { path = "../antenna_server", optional = true }
antenna_codegen = { path = "../antenna_codegen" }
# transitive dependency for uuid in browser
getrandom = { version = "0.2.17", features = ["js"], optional = true}

[features]
default = []
server = ["dep:antenna_server"]
client = ["dep:antenna_wasm_gen", "dep:getrandom"]
full = ["server", "client"]
