[package]
name = "antenna_core"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.11.0"
uuid = { version = "1.19.0", features = ["serde", "v4", "js"] }
serde_bytes = "0.11.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webrtc = "0.17.0"
