[package]
name = "antenna_core"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
serde_bytes = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webrtc = {workspace = true}
