[package]
name = "antenna_wasm_gen"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
antenna_core = { path = "../antenna_core" }
wasm-bindgen = "0.2.108"
js-sys = "0.3.85"
wasm-bindgen-futures = "0.4.58"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
thiserror = "2.0.18"
postcard = { version = "1.1.3", features = ["alloc"] }
heapless = "0.9.2"
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.85"
features = ["MessageEvent", "WebSocket", "ErrorEvent", "RtcPeerConnection", "RtcDataChannel", "RtcDataChannelEvent", "RtcSdpType", "RtcSessionDescription", "RtcSessionDescriptionInit", "RtcIceCandidate", "RtcIceCandidateInit", "RtcConfiguration", "RtcIceServer", "BinaryType", "Blob", "console", "RtcDataChannelType", "RtcDataChannelState", "RtcPeerConnectionIceEvent"]
