[package]
name = "antenna_wasm_gen"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
antenna_core = { workspace = true}
wasm-bindgen =  { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
postcard = { workspace = true }
heapless = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = {workspace = true}
