[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
antenna = { path = "../../../antenna", features = ["server"] }
