[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.8", features = ["cors"] }
antenna = { path = "../../../antenna", features = ["server"] }
async-trait = "0.1.89"
bytes = "1.11.1"
shared = { path = "../shared" }
postcard = { version = "1.1.3", features = ["alloc"] }
