[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
antenna = { path = "../../../antenna", features = ["client"] }
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = [] }
js-sys = "0.3.85"
shared = { path = "../shared" }
